Related CS EBNF to AS MOF

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4374,6 +4374,7 @@ may make this \syntax{'end'} optional. However, in this standard,
 the \syntax{'end'} is not marked as optional, because it may be needed to effectively
 disambiguate heterogeneous texts.
 
+The concrete syntax in EBNF relates to the abstract syntax in MOF via a simple scheme. Each non-terminal in the EBNF conforms to either a class or an attribute of a class. The latter is only the case if the non-terminal translates to a single non-terminal (e.g. IRI or String) and is not part of an alternative in another rule. Each generalization in MOF yields a rule that consists solely of alternatives of single non-terminals. The properties of a class yield a EBNF rule for this class as a concatenation of the property types with syntactic terminals. Options are represented by cardinalities of the respective properties from 0 to 1 and respectively the *-Functor by cardinalities from 0 to *.
 
 \medskip
 The \DOL document types are as follows
