minor edits of syntax intro

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4374,7 +4374,18 @@ may make this \syntax{'end'} optional. However, in this standard,
 the \syntax{'end'} is not marked as optional, because it may be needed to effectively
 disambiguate heterogeneous texts.
 
-The concrete syntax in EBNF relates to the abstract syntax in MOF via a simple scheme. Each non-terminal in the EBNF conforms to either a class or an attribute of a class. The latter is only the case if the non-terminal translates to a single non-terminal (e.g. IRI or String) and is not part of an alternative in another rule. Each generalization in MOF yields a rule that consists solely of alternatives of single non-terminals. The properties of a class yield a EBNF rule for this class as a concatenation of the property types with syntactic terminals. Options are represented by cardinalities of the respective properties from 0 to 1 and respectively the *-Functor by cardinalities from 0 to *.
+The concrete syntax in EBNF relates to the abstract syntax in MOF via a simple scheme. Each 
+ non-terminal in the EBNF conforms to either a class or an attribute of a class in MOF.
+By default non-terminals are represented as classes. Non-terminals are represented as attributes in MOF 
+only if in the corresponding EBNF production rule a non-terminal (a) produces 
+a single non-terminal  (e.g. IRI or String) and  
+(b) is  not part of an alternative in another rule. 
+Each generalization in MOF yields a EBNF rule that 
+consists solely of alternatives of single non-terminals. 
+The properties of a MOF class form a ENBF rule for the corresponding non-terminal, 
+which produces the concatenation of the property types of the class with syntactic terminals.
+Cardinality  `0..1' in MOF is  represented as options in EBNF.  Analogously, the cardinality 
+`0..*' in MOF is represented by the repetition symbol `*' in EBNF.
 
 \medskip
 The \DOL document types are as follows
