--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4467,7 +4467,7 @@ clause~\ref{c:abstract-syntax}.
  MOF metaclass   \syntax{AlignmentDefinition} in
 clause~\ref{c:abstract-syntax}.
 \item conservative extensions, e.g.\ mappings between OMS and their modules, see the
- MOF metaclass   \syntax{ConservativeExtensionDefinition} in
+ MOF metaclass   \syntax{Conservative\-ExtensionDefinition} in
 clause~\ref{c:abstract-syntax}.
 \end{itemize}
 \DOL uses symbol maps to express signature translations in such OMS mappings; see the
@@ -8886,12 +8886,14 @@ $L_B = (alignName++"\_bridge", \cI ,\Sigma,\Mod((\Sigma,\Delta)),\Delta)$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sssclause{Semantics of sets of correspondences}
+
 \semdom{
 \begin{array}{ll}
 sem(\Gamma, \Sigma_1,\Sigma_2, \syntax{AlignmentSemantics}, Set(\syntax{Correspondence}))& = (\Sigma_s,\Sigma_t,(\cI,\Sigma,\Delta),\phi_s:\Sigma_s\to\Sigma,\phi_t:\Sigma_t\to\Sigma, smap, cvalues)\\
  & : (Signature,Signature,(Institution,Signature,Sentences),SignatureMorphism,SignatureMorphism,MapOfSymbols,Bool)
 \end{array}
  }
+
 
 If $c_1,\ldots,c_n$ are all \syntax{Correspondence}s and 
 $aSem$ is an \syntax{AlignmentSemantics},
@@ -9964,7 +9966,7 @@ can be expressed in second-order logic.
 
 Model reducts are defined in the following way: 
 Given a signature morphism $\sigma:\Sigma_1\to\Sigma_2$ and a $\Sigma_2$-model
-$I_2=(\UR,\UD,\rel,\fun,\intCL,\seq)$, $I\forget{\sigma}=(\UR,\UD,\rel,\fun,\intCL\circ\sigma,\seq\circ\sigma)$. 
+$I_2 =$ $(\UR,\UD,$ $\rel,\fun,\intCL,\seq)$, $I\forget{\sigma}=(\UR,\UD,\rel,\fun,\intCL\circ\sigma,\seq\circ\sigma)$. 
 
 Given two \CL models $I_1=(\UR_1,\UD_1,\rel_1,\fun_1,\intCL_1,\seq_1)$
 and  $I_2=(\UR_2,\UD_2,\rel_2,\fun_2,\intCL_2,\seq_2)$, a homomorphism
@@ -12118,7 +12120,7 @@ There are also general purpose OMS languages, which can express both \termref{OM
 \sclause{MOF Abstract Syntax}
 Queries are a means to extract information from an OMS.  \DOL's \syntax{QueryDefinition}s cover 
 ``select''-type queries that deliver an answer substitution for the query variables. (Answer) 
-substitutions can be stored separately, using a \syntax{SubstitutionDefinition}. A
+substitutions can be stored separately, using a \syntax{Substitution\-Definition}. A
 \syntax{ResultDefinition} expresses that certain answer substitutions are
 the result of a query. Optionally, a result can be expressed to be
 complete, meaning that it comprises all answer substitutions to the query.
