fixing overfull boxes

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -7178,7 +7178,7 @@ is interpreted in the pre-order defined by $M_1\leq M_2$
 if there is a model homomorphism $\M_1\to\M_2$.
  \item $\Delta = \bot$ 
  \item $\Gamma'$ is obtained from $\Gamma''=Env(\Gamma, O')$ by adding to $\Gamma''.imports$ a new
-node labeled with $(Name(O), \Inst(O),\allowbreak \Sig(O), \Mod(O), \Th(O))$ and
+node labeled with $(Name(O), \Inst(O),\allowbreak \Sig(O), \allowbreak \Mod(O), \Th(O))$ and
 an edge from the node of $O'$ to the node of $O$ labeled with the identity
 morphism on $\Sig(O')$.
 \end{itemize}
@@ -8840,11 +8840,12 @@ and $t.\syntax{target}$ in $\Gamma'.imports$.
 
 \sssclause{Semantics of alignments}
 
-\semdom{
+\semdom{\begin{footnotesize}
 \begin{array}{ll}
 sem(\Gamma,  L_1, L_2,(\syntax{AlignmentCardinality},\syntax{AlignmentCardinality}),\syntax{AlignmentSemantics}, Set(\syntax{Correspondence}))& = G\\
  & : OMSGraph
 \end{array}
+\end{footnotesize}
 }
 
 If $card_1, card_2$ are \syntax{AlignmentCardinality}, 
@@ -8891,11 +8892,13 @@ $L_B = (alignName++"\_bridge", \cI ,\Sigma,\Mod((\Sigma,\Delta)),\Delta)$.
 
 \sssclause{Semantics of sets of correspondences}
 
-\semdom{
+\semdom{\begin{footnotesize}
 \begin{array}{ll}
 sem(\Gamma, \Sigma_1,\Sigma_2, \syntax{AlignmentSemantics}, Set(\syntax{Correspondence}))& = (\Sigma_s,\Sigma_t,(\cI,\Sigma,\Delta),\phi_s:\Sigma_s\to\Sigma,\phi_t:\Sigma_t\to\Sigma, smap, cvalues)\\
- & : (Signature,Signature,(Institution,Signature,Sentences),SignatureMorphism,SignatureMorphism,MapOfSymbols,Bool)
+ & : (Signature,Signature,(Institution,Signature,Sentences), \\
+& SignatureMorphism,SignatureMorphism,MapOfSymbols,Bool)
 \end{array}
+\end{footnotesize}
  }
 
 
