--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -19,7 +19,8 @@
 %%\pdfcommentfalse
 
 
-\documentclass[10pt, a4paper, wd]{isov2} 
+\documentclass[10pt, a4paper]{isov2} 
+%\documentclass[10pt, a4paper, wd]{isov2} 
 
 %% Cleaning up things that isov2 gets wrong
 \makeatletter
@@ -689,6 +690,7 @@ we encourage readers to report any ambiguities, inconsistencies, or inaccuracies
 they may find by completing the Issue Reporting Form listed on the main web page
 \url{http://www.omg.org}, under Documents, Report a Bug/Issue (\url{http://www.omg.org/technology/agreement.htm}).
 
+\newpage
 
 \renewcommand{\contentsname}{Table of Contents}
 \tableofcontents
@@ -4570,7 +4572,7 @@ see Fig.~\ref{fig:basic_oms}.
 See the informative annexes~\ref{a:owl} to~\ref{a:casl} for details.
 
 
-\begin{figure}
+\begin{figure}[b]
   \centering
     \includegraphics[scale=0.47]{mof/native_document.png}
    \caption{Informative diagram showing subclasses of \syntax{NativeDocument}}
